...
      <TouchableOpacity
        style={[
          styles.button,
          { backgroundColor: Colors.main100, borderColor: Colors.main100 },
        ]}
        onPress={onEmailPress}
        testID="auth-option-email"
      >
        <Ionicons name="mail-outline" size={20} color={Colors.textOpposite} />
        <Text style={[styles.buttonText, { color: Colors.textOpposite }]}>
          {t("continue_with_email")}
        </Text>
      </TouchableOpacity>
...
